samples/_failures_safe/1761789136_f05c46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b809b263.c: In function ‘main’:
./samples/SAFE/__tmp_b809b263.c:167:12: error: missing terminating " character
  167 |     printf("Exiting
      |            ^~~~~~~~
./samples/SAFE/__tmp_b809b263.c:167:5: error: expected expression at end of input
  167 |     printf("Exiting
      |     ^~~~~~
./samples/SAFE/__tmp_b809b263.c:167:5: error: expected declaration or statement at end of input
